add unlock condition for dragon species